--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ base64 = "0.11"
 rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }
 x25519-dalek = "0.6"
 num_cpus = "1.0"
+regex = "1"
 
 [dev-dependencies]
 bencher = "0.1"
